feat: 스키마 표준 검사 에러 반환 표준화